 - Assume compiler supports ISO-646 without needing `<ciso646>` header.
 - Feel free to use `pqxx::encoding_group`.  It's no longer "internal."
 - There's now an `UNKNOWN` encoding group.  It's the only fully safe default.
 - Array parsing will refuse to work if the encoding group is `UNKNOWN`.
 - Tests are now in a single directory (#934)
 - Removed cumbersome `test_all.py` script.
7.10.2
 - CMake: Drop unneeded, broken `PostgreSQL_INCLUDE_DIRS` definition. (#981)
 - Handle spaces and single quotes in `connection::connection_string()` (#992)
 - _I said,_ can't pass parameters to streaming query.  Remove support. (#997)
 - Fix pkgconfig for static linkage; use config module `libpq`. (#999)
 - Made `row::as_tuple()` public. (#1003)
 - Avoid garbage at end of demangled names. (#1007)
 - Fix build when `std::free` is not `noexcept`, such as Mac. (#1010)
 - Document: generally `pqxx::type_name` should be a `std::string_view`. (#1009)
7.10.1
 - Fix string conversion buffer budget for arrays containing nulls. (#921)
 - Remove `-fanalyzer` option again; gcc is still broken.
 - Oops, no, minimum CMake version is not 3.28, but 3.12!
 - Fix warnings on compilers that accept `[[assume]]` with a warning. (#928)
 - Can't pass parameters to streaming query.
 - CMake build: take libpq path from build target, not absolute path. (#964)
 - Added explanation to `listen()` of when notifications come in. (#963)
7.10.0
 - Deprecate `errorhandler`; replace with lambda-friendly "notice handlers."
 - Deprecate `notification_receiver`; replace with "notification handlers"
 - Bump minimum CMake version to 3.12. (#851, #874)
 - Fixed error message on clashing transaction focuses. (#879)
 - Don't call`/bin/true`; macOS doesn't have it.  Just call `true`. (#885)
 - Deprecate `exec_prepared()`; just use `exec()` with a `pqxx::prepped`.
 - Deprecate `exec1()` etc.  Use `result::expect_rows()` etc.
 - Fix error-reporting crash in non-blocking connection constructor. (#894)