@@ -40,6 +40,7 @@
  - Array parsing will refuse to work if the encoding group is `UNKNOWN`.
  - Tests are now in a single directory (#934)
  - Removed cumbersome `test_all.py` script.
+ - `check_cast()` supports infinities and NaNs.
 7.10.2
  - CMake: Drop unneeded, broken `PostgreSQL_INCLUDE_DIRS` definition. (#981)
  - Handle spaces and single quotes in `connection::connection_string()` (#992)
